--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,16 +27,16 @@ android {
       cmake {
         arguments "-DANDROID_STL=c++_shared",
                   "-DCMAKE_BUILD_TYPE=Release",
-                  "-DANDROID_PLATFORM=android-26",
+                  "-DANDROID_PLATFORM=android-${safeExtGet('minSdkVersion', 26)}",
                   "-DANDROID_CPP_FEATURES=rtti exceptions",
                   "-DLLAMA_BUILD_EXAMPLES=OFF",
                   "-DLLAMA_BUILD_SERVER=OFF",
                   "-DBUILD_SHARED_LIBS=ON",
-                  "-DRCT_NEW_ARCH_ENABLED=1",
-                  "-DANDROID_TOOLCHAIN=clang"
-        cppFlags "-std=c++17 -frtti -fexceptions -Oz -DRCT_NEW_ARCH_ENABLED=1 -DLLAMA_SHARED"
+                  "-DRCT_NEW_ARCH_ENABLED=${safeExtGet('newArchEnabled', '1')}"
+
+        cppFlags "-std=c++17 -frtti -fexceptions -DRCT_NEW_ARCH_ENABLED=1 -DLLAMA_SHARED"
       }
-    }A
+    }
 
     ndk {
       abiFilters 'arm64-v8a', 'x86_64'
@@ -63,7 +63,6 @@ android {
   externalNativeBuild {
     cmake {
       path "src/main/jni/CMakeLists.txt"
-      version "3.22.1"
     }
   }
 
