--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "android",
     "ios",
     "cpp",
+    "LICENSE",
+    "README.md",
+    "INTERFACE.md",
+    "LlamaCppRn.podspec",
     "!cpp/llama.cpp/examples",
     "!cpp/llama.cpp/tools",
     "!cpp/llama.cpp/.devops",
@@ -44,7 +48,7 @@
     "typescript:example": "cd example && tsc --noEmit",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
-    "prepare": "rimraf lib && tsc -p tsconfig.build.json",
+    "prepare": "tsc -p tsconfig.build.json",
     "release": "release-it",
     "example": "npm --prefix example",
     "bootstrap": "npm --prefix example install && npm install && npm --prefix example run pods",
@@ -112,7 +116,7 @@
     "react-native": "0.76.9",
     "react-native-builder-bob": "^0.40.0",
     "release-it": "^19.0.0",
-    "rimraf": "^6.0.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.8.3"
   },
   "peerDependencies": {
