--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -611,7 +611,7 @@ jobs:
           cat package.json | grep -A 3 "\"name\":"
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Build package
         run: npm run prepare
