--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "@novastera-oss/llamacpp-rn",
   "version": "0.1.0",
   "description": "React Native Turbo Module for llama.cpp integration, optimized for the New Architecture",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
-  "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index.tsx",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "lib/index.d.ts",
   "source": "src/index.tsx",
   "files": [
     "src",
