ci: stop on every main push

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: CI and Native Build
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ develop ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
   release:
