test: changeing structure to fit turbomodule doc

--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
     "lib",
     "android",
     "ios",
-    "cpp",
-    "specs",
+    "tm",
     "LICENSE",
     "README.md",
     "INTERFACE.md",
     "LlamaCppRn.podspec",
-    "!cpp/llama.cpp/examples",
-    "!cpp/llama.cpp/tools",
-    "!cpp/llama.cpp/.devops",
-    "!cpp/llama.cpp/.github",
-    "!cpp/llama.cpp/.git",
-    "!cpp/llama.cpp/.gitignore",
-    "!cpp/llama.cpp/.gitmodules",
-    "!cpp/llama.cpp/ci",
-    "!cpp/llama.cpp/docs",
-    "!cpp/llama.cpp/scripts",
-    "!cpp/llama.cpp/tests",
+    "!tm/llama.cpp/examples",
+    "!tm/llama.cpp/tools",
+    "!tm/llama.cpp/.devops",
+    "!tm/llama.cpp/.github",
+    "!tm/llama.cpp/.git",
+    "!tm/llama.cpp/.gitignore",
+    "!tm/llama.cpp/.gitmodules",
+    "!tm/llama.cpp/ci",
+    "!tm/llama.cpp/docs",
+    "!tm/llama.cpp/scripts",
+    "!tm/llama.cpp/tests",
     "*.podspec",
     "!lib/typescript/example",
     "!ios/build",
@@ -93,9 +92,9 @@
     "access": "public"
   },
   "codegenConfig": {
-    "name": "LlamaCppRnSpecs",
-    "type": "modules",
-    "jsSrcsDir": "specs",
+    "name": "llamacpprn",
+    "type": "all",
+    "jsSrcsDir": "tm",
     "android": {
       "javaPackageName": "com.llamacpprn"
     }
@@ -159,8 +158,8 @@
     }
   },
   "react-native-builder-bob": {
-    "source": "specs",
-    "output": "lib",
+    "source": "tm",
+    "output": "tm",
     "targets": [
       "commonjs",
       "module",
