--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "@novastera-oss/llamacpp-rn",
   "version": "0.1.0",
   "description": "React Native Turbo Module for llama.cpp integration, optimized for the New Architecture",
-  "main": "lib/NativeLlamaCppRn.js",
-  "module": "lib/NativeLlamaCppRn.js",
-  "types": "lib/NativeLlamaCppRn.d.ts",
-  "source": "specs/NativeLlamaCppRn.ts",
+  "main": "tm/NativeLlamaCppRn.js",
+  "module": "tm/NativeLlamaCppRn.js",
+  "types": "tm/NativeLlamaCppRn.d.ts",
+  "source": "tm/NativeLlamaCppRn.ts",
   "files": [
     "src",
-    "lib",
+    "tm",
     "android",
     "ios",
-    "tm",
     "LICENSE",
     "README.md",
     "INTERFACE.md",
@@ -28,7 +27,6 @@
     "!tm/llama.cpp/scripts",
     "!tm/llama.cpp/tests",
     "*.podspec",
-    "!lib/typescript/example",
     "!ios/build",
     "!android/build",
     "!android/.cxx",
